--- a/src/BrokerMessage.RabbitMQ.Producer/BrokerMessage.RabbitMQ.Producer.csproj
+++ b/src/BrokerMessage.RabbitMQ.Producer/BrokerMessage.RabbitMQ.Producer.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>e456680c-9048-43ac-a698-3d2d52978bfe</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Silverback.Core" Version="2.1.1" />
     <PackageReference Include="Silverback.Core.Model" Version="2.1.1" />
