--- a/src/BrokerMessage.RabbitMQ.Consumer/Properties/launchSettings.json
+++ b/src/BrokerMessage.RabbitMQ.Consumer/Properties/launchSettings.json
@@ -23,6 +23,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5003;http://localhost:5002"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
